# zkevm-fuzzer

./: .gitignore  Cargo.toml
.cargo/: config.toml
input/: in1  in2  in3
src/: lib.rs  main.rs  test.rs
src/fuzzer/: calldatacopy_root.rs  mod.rs
src/fuzzer/opcodes/: calldatacopy-root.rs
src/input/: mod.rs
src/input/opcodes/: calldatacopy.rs  mod.rs
src/opcodes/: calldatacopy.rs  mod.rs
